1. All HTML designing done. 2. Only feedback form implementation left.

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -86,8 +86,16 @@ body{
 	
 
 }
-.thumbnail{
+.sell{
 	background: url("../images/postBack.jpg") no-repeat;
+	background-size: 100% 100%;
+}
+.share{
+	background: url("../images/greenback.jpg") no-repeat;
+	background-size: 100% 100%;
+}
+.lostfound{
+	background: url("../images/yellowback.jpg") no-repeat;
 	background-size: 100% 100%;
 }
 .thumbnail img{
