--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,9 +8,9 @@
 	
 
  	{% block add_static %}
-	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
-	<script src="../static/js/jquery.min.js"></script>
-	<script src="../static/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
  	<link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all">
 	{% endblock add_static %}
