--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -18,14 +18,11 @@
 
 {% block content %}
 
-{% if chat_link_user %}
-	<a href="{{ chat_link_user.get_chat_URL }}"><button class="btn btn-primary btn-lg btn-block">Submit</button></a>
-{% endif %}
 <div class="container">
 <div class="row">
 <div class="col-md-12">
 	
-		<center><h class="heading"> Profile</h></center>
+		<center><h class="heading">User Profile</h></center>
 		<br>
 		<br>
 </div>
@@ -39,22 +36,26 @@
 		<fieldset>
 			<legend> Basic Information</legend>
 			
-			
+			{% if chat_link_user %}
+					<a href="{{ chat_link_user.get_chat_URL }}"><button class="btn btn-primary btn-block">Chat with {{ profile_user.name }}</button></a><br>
+			{% endif %}
 			
 			<form>
 			
 			<div class="row">
 					
-			<div class="col-md-4">
-				<td><img height="200px" width="150px" src="../static/images/student_pic.jpg"></img></td>
+			<div class="col-md-12" align="center">
+				<td><img height="200px" src="{{ profile_user.image.url }}" alt = "No image available"></img></td>
 				
 				
 			</div>
 			<div class="col-md-1">
 			</div>
 			<div class="col-md-2">
+				
 				<form>
-				&emsp;&emsp;&emsp;&emsp;<input onclick="change()" type="button" name="connect" value="Connect" id="connect" class="btn btn-default">
+				
+				
 			</div>	
 			<div class="col-md-1">
 			</div>
@@ -79,7 +80,7 @@
 				
 			</div>
 			
-			<div class="col-md-6">
+			<div class="col-md-10">
 			
 				
 				
@@ -102,7 +103,7 @@
 			<label for="Department">Department:</label>
 			
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-10">
 			
 			<input type="text" name="Department" value="{{ profile_user.department }}" class="form-control" id="exampleInputText1" readonly >
 			
@@ -124,7 +125,7 @@
 			<label for="batch">Batch:</label>
 			
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-10">
 			
 			<input type="text" name="batch" value="{{ profile_user.batch }}" class="form-control" id="exampleInputText1" readonly>
 			
@@ -145,7 +146,7 @@
 			<label for="address">Address:</label>
 			
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-10">
 			
 			<input type="text" name="address" value="{{ profile_user.address  }}" class="form-control" id="exampleInputText1" readonly>
 			
@@ -166,7 +167,7 @@
 			<label for="mobile">Mobile:</label>
 			
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-10">
 			
 			<input type="text" name="mobile" value="{{ profile_user.contact }}" class="form-control" id="exampleInputText1" readonly>
 			
@@ -187,7 +188,7 @@
 			<label for="email">Email</label>
 			
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-10">
 			
 			<input type="email" name="email"  class="form-control" id="exampleInputEmail1" value="{{ profile_user.user_id }}" readonly>
 			
