--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -44,6 +44,7 @@
 			</div>
 			<div class="col-lg-2">
 				<h3><a href="/" style="color:white;">Home</a></h3>
+				<a href="/feedback">Feedback</a><br>
 			</div>
 		</div>
 
